--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                     <img src="img/starmetade.svg" alt="">
                                 </div>
                                 <p>14 avaliações</p>
-                                <a class="dsmovie-btn" href="folders/formmotoqueiro.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="folders/formmoto.html">Avaliar</a>
                             </div>
                         </div>
                     </div>
