--- a/folders/index.html
+++ b/folders/index.html
@@ -101,7 +101,7 @@
                                     <img src="img/starmetade.svg" alt="">
                                 </div>
                                 <p>14 avaliações</p>
-                                <a class="dsmovie-btn" href="formmotoqueiro.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="formmoto.html">Avaliar</a>
                             </div>
                         </div>
                     </div>
